--- a/Login.html
+++ b/Login.html
@@ -25,7 +25,7 @@
         <div class="notAJoinUser">
             <div class="notAJoinUserText">Not a Join user?</div>
             <button class="notAJoinUserButton">
-                <a href="Signup.html" style="    
+                <a href="./Signup.html" style="    
                 color: white;
                 text-decoration: none;
                 font-weight: bolder;
