--- a/contacts.html
+++ b/contacts.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
     <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
 </head>
-<body onload="includeHTML(); init()">
+<body onload="includeHTML(); init(); showInitials()">
 
     <div w3-include-html="./assets/templates/header.html"></div>
     <div w3-include-html="./assets/templates/side_menu.html"></div>
