--- a/add_task.html
+++ b/add_task.html
@@ -18,7 +18,7 @@
     <title>Join</title>
 </head>
 
-<body onload="includeHTML(); loadTasks()">
+<body onload="includeHTML(); loadTasks(); showInitials()">
     
 
     <div w3-include-html="./assets/templates/header.html"></div>
