--- a/legal_notice.html
+++ b/legal_notice.html
@@ -12,7 +12,7 @@
     <title>Join | Legal Notice</title>
 </head>
 
-<body onload="includeHTML()">
+<body onload="includeHTML(); showInitials()">
 
     <div w3-include-html="./assets/templates/header.html"></div>
 
