--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -12,7 +12,7 @@
     <title>Join | Privacy Policy</title>
 </head>
 
-<body onload="includeHTML()">
+<body onload="includeHTML(); showInitials()">
 
     <div w3-include-html="./assets/templates/header.html"></div>
 
