--- a/contacts.html
+++ b/contacts.html
@@ -43,7 +43,7 @@
             </div>
             
             <div id="targetArea"></div>
-            <img onclick="showEditDeleteMobileOnSlide()" class="menuOptionsContact" src="assets/img/MenuContactOptions.png">
+            <img onclick="showEditDeleteMobileOnSlide()" id="menuOptionsContactMobile" class="menuOptionsContact" src="assets/img/MenuContactOptions.png">
         </div>
 
 
