--- a/contacts.html
+++ b/contacts.html
@@ -41,6 +41,8 @@
             <div id="contactAddedSuccesfullyId" class="contactAddedSuccesfully">
                 <img src="assets/img/addedContadctSuccesfully.png">
             </div>
+
+            <div onclick="closeDeleteAndEdit()" id="overlayOnMobile" class="overlay"></div>
             
             <div id="targetArea"></div>
             <img onclick="showEditDeleteMobileOnSlide()" id="menuOptionsContactMobile" class="menuOptionsContact" src="assets/img/MenuContactOptions.png">
