--- a/add_task.html
+++ b/add_task.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
     <link rel="stylesheet" href="./css/add_task.css">
     <link rel="stylesheet" href="./css/add_task_container.css">
+    <link rel="stylesheet" href="./css/add_task_buttons.css">
+    <link rel="stylesheet" href="./css/add_task_resp.css">
     <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
     <title>Join</title>
 </head>
