--- a/contacts.html
+++ b/contacts.html
@@ -56,7 +56,7 @@
 
         <div class="container" id="modal">
             <div class="panel" id="panel">
-                <div class="centerAll">
+                <div id="letAddContactSlideIn" class="centerAll">
                     <div class="leftrightContainer">
                         <img class="exitAddContactMobile" onclick="closeAddContactMobile()" src="assets/img/CloseWhite.png">
                         <div class="addContactImg">
