--- a/contacts.html
+++ b/contacts.html
@@ -27,6 +27,8 @@
                         
                     </div>
 
+                    <div id="overlayOnMobileAddContacts" class="overlayAddContact"></div>
+
                     <img onclick="showMobileAddContact()" class="addContactMobileImg" src="assets/img/addContactMobile.png">
                 </div>
             </div>
@@ -35,6 +37,9 @@
         
 
         <div id="rightContainerContacts" class="rightContainer">
+
+            <div id="overlayOnMobileEditContacts" class="overlayEditContact"></div>
+
             <img class="betterWaT show" id="BetterWaTId" src="assets/img/contacts-BetterWaT.png" alt="">  
             <img class="betterWatMobile" src="assets/img/betterWaTMobile.png">
             <img onclick="showContactListMobile()" class="arrowLeftShowContact" src="assets/img/arrow-left-line.png">
@@ -55,7 +60,7 @@
         </div>  
 
 
-                <div id="letAddContactSlideIn" class="centerAll">
+                <div id="letAddContactSlideIn" class="centerAll displayNone">
                     <div class="leftrightContainer">
                         <img class="exitAddContactMobile" onclick="closeAddContactMobile()" src="assets/img/CloseWhite.png">
                         <div class="addContactImg">
