--- a/test.html
+++ b/test.html
@@ -173,3 +173,12 @@
 </html>
 
 
+<div class="input-container">
+    <div class="">
+    <input type="text" id="subtask-input" class="subtask-input fontSize20px" autocomplete="off" placeholder="Add new subtask" onclick="activateInput()" onkeydown="checkSubmit(event)" size="10">
+    <img src="./assets/img/add-subtask.png" onclick="event.stopPropagation(); activateInput(); setFocus()" id="add-subtask" class="add-subtasks-btn">
+    <div id="subtask-input-actions" class="flex-board add-subtasks-btn d-none">
+        <img src="./assets/img/check-blue.png" class="subtask-actions submit-input" onclick="submitSubtask('subtask-input')">
+        <span class="vertical-line-sub"></span>
+        <img src="./assets/img/close.png" class="subtask-actions" onclick="deactivateInput()">
+    </div>
