--- a/legal_notice.html
+++ b/legal_notice.html
@@ -8,6 +8,7 @@
     <script src="./js/templates.js"></script>
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
     <link rel="stylesheet" href="./css/legal_notice.css">
+    <link rel="stylesheet" href="./css/legal_notice_resp.css">
     <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
     <title>Join | Legal Notice</title>
 </head>
@@ -20,11 +21,11 @@
 
         <div class="legalNoticeHeadlineContainer">
             <span class="legalNoticeHeadline">Legal Notice</span>
+            <div class="backArrow">
+                <img onclick="history.go(-1)" src="./assets/img/arrow-blue-left.png" alt="Back">
+            </div>
         </div>
 
-        <div class="backArrow">
-            <img onclick="history.go(-1)" src="./assets/img/arrow-blue-left.png" alt="Back">
-        </div>
 
         <div class="legalNoticeContent">
             <h3>Imprint</h3>
