finished responsive for addTask,LN,PP. overall design updates to match style on all pages

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -8,6 +8,7 @@
     <script src="./js/templates.js"></script>
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
     <link rel="stylesheet" href="./css/privacy_policy.css">
+    <link rel="stylesheet" href="./css/privacy_policy_resp.css">
     <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
     <title>Join | Privacy Policy</title>
 </head>
@@ -20,11 +21,11 @@
 
         <div class="ppHeadlineContainer">
             <span class="ppHeadline">Privacy Policy</span>
+            <div class="backArrow">
+                <img onclick="history.go(-1)" src="./assets/img/arrow-blue-left.png" alt="Back">
+            </div>
         </div>
 
-        <div class="backArrow">
-            <img onclick="history.go(-1)" src="./assets/img/arrow-blue-left.png" alt="Back">
-        </div>
 
         <div class="ppContent">
 
