--- a/Login.html
+++ b/Login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log in</title>
+    <title>Join | Log In</title>
     <link rel="stylesheet" href="css/logIn.css">
     <script src="js/signUp.js"></script>
     <script src="js/register.js"></script>
