--- a/Signup.html
+++ b/Signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign up</title>
+    <title>Join | Sign Up</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="css/signUp.css">
     <script src="js/signUp.js"></script>
