--- a/add_task.html
+++ b/add_task.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/add_task_buttons.css">
     <link rel="stylesheet" href="./css/add_task_resp.css">
     <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
-    <title>Join</title>
+    <title>Join | Add Task</title>
 </head>
 
 <body onload="includeHTML(); loadTasks(); showInitials(); loadAndRenderNames();">
