--- a/summary.html
+++ b/summary.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Join | Summary</title>
     <script src="./include.js"></script>
     <link rel="stylesheet" href="./fonts.css">
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
