edited many things, to match the Join Checkliste

--- a/addTask.html
+++ b/addTask.html
@@ -5,17 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./include.js"></script>
-    <script src="./js/html_templates.js"></script>
+    <script src="./js/htmlTemplates.js"></script>
     <script src="./js/signUp.js"></script>
     <script src="./js/logIn.js"></script>
     <script src="./js/templates.js"></script>
-    <script src="./js/add_task.js"></script>
+    <script src="./js/addTaskEventListener.js"></script>
+    <script src="./js/addTaskSubtasks.js"></script>
+    <script src="./js/addTask.js"></script>
 
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
-    <link rel="stylesheet" href="./css/add_task.css">
-    <link rel="stylesheet" href="./css/add_task_container.css">
-    <link rel="stylesheet" href="./css/add_task_buttons.css">
-    <link rel="stylesheet" href="./css/add_task_resp.css">
+    <link rel="stylesheet" href="./css/addTask.css">
+    <link rel="stylesheet" href="./css/addTaskContainer.css">
+    <link rel="stylesheet" href="./css/addTaskButtons.css">
+    <link rel="stylesheet" href="./css/addTaskResp.css">
     <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
     <title>Join | Add Task</title>
 </head>
