--- a/board.html
+++ b/board.html
@@ -13,7 +13,7 @@
     <script src="./js/templates.js"></script>
     <script src="./js/board.js"></script>
     <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
-    <link rel="stylesheet" href="./css/add_task_container.css">
+    <link rel="stylesheet" href="./css/addTaskContainer.css">
 </head>
 
 
