--- a/legalNotice.html
+++ b/legalNotice.html
@@ -7,8 +7,8 @@
     <script src="./include.js"></script>
     <script src="./js/templates.js"></script>
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
-    <link rel="stylesheet" href="./css/legal_notice.css">
-    <link rel="stylesheet" href="./css/legal_notice_resp.css">
+    <link rel="stylesheet" href="./css/legalNotice.css">
+    <link rel="stylesheet" href="./css/legalNoticeResp.css">
     <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
     <title>Join | Legal Notice</title>
 </head>
