--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -7,8 +7,8 @@
     <script src="./include.js"></script>
     <script src="./js/templates.js"></script>
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
-    <link rel="stylesheet" href="./css/privacy_policy.css">
-    <link rel="stylesheet" href="./css/privacy_policy_resp.css">
+    <link rel="stylesheet" href="./css/privacyPolicy.css">
+    <link rel="stylesheet" href="./css/privacyPolicyResp.css">
     <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
     <title>Join | Privacy Policy</title>
 </head>
