added automatic min date and edited color

--- a/addTask.html
+++ b/addTask.html
@@ -74,7 +74,7 @@
                             <span>Due Date</span>
                             <p class="redText">*</p>
                         </div>
-                        <input required class="dateInput fontSize20px" id="dateInputPicker" type="date" id="date">
+                        <input required class="dateInput fontSize20px" id="dateInputPicker" type="date">
                     </div>
                     <div class="prioPickerContainer ma-bo-8">
                         <span>Prio</span>
