--- a/board.html
+++ b/board.html
@@ -6,6 +6,7 @@
     <title>Join | Board</title>
     <link rel="stylesheet" href="./css/board.css">
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
+    <link rel="stylesheet" href="./css/navbarSidebarMobile.css">
     <link rel="stylesheet" href="./fonts.css">
     <script src="./include.js"></script>
     <script src="./js/signUp.js"></script>
