--- a/summary.html
+++ b/summary.html
@@ -7,7 +7,9 @@
     <script src="./include.js"></script>
     <link rel="stylesheet" href="./fonts.css">
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
+    <link rel="stylesheet" href="./css/navbarSidebarMobile.css">
     <link rel="stylesheet" href="./css/summary.css">
+    <link rel="stylesheet" href="./css/summaryResponsive.css">
     <script src="./js/signUp.js"></script>
     <script src="./js/logIn.js"></script>
     <script src="./js/templates.js"></script>
@@ -20,11 +22,15 @@
     <div w3-include-html="./assets/templates/side_menu.html"></div>
 
 
+
+<div class="flex-start-respo">
     <div class="headline-summary">
       <span class="span-360">JOIN 360</span>
       <div class="vertical-line"></div>
       <span class="span-thin">Key Metrics at a Glance</span>
+      <img class="horizontal-line" src="./assets/img/horizontal-line.png">
     </div>
+</div>
 
     <div class="main-container">
       <div class="left-content">
