--- a/board.html
+++ b/board.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./css/firstHalfAddTaskContainer.css">
     <link rel="stylesheet" href="./css/secondHalfAddTaskContainer.css">
     <link rel="stylesheet" href="./css/board-Responsive.css">
+    <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
 </head>
 
 
@@ -84,7 +85,9 @@
     </div>
 
     <div class="card-board">
+        <div class="responsive-done">
             <span class="title-board align-center-board height-board">Done</span>
+        </div>
         <div id="Done" class="fields" ondragleave="removeHighlight('Done')"  ondrop="moveTo('Done')" ondragover="allowDrop(event); highlight('Done')">
         </div>
     </div>
