--- a/summary.html
+++ b/summary.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/navbarSidebarMobile.css">
     <link rel="stylesheet" href="./css/summary.css">
     <link rel="stylesheet" href="./css/summaryResponsive.css">
+    <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
     <script src="./js/signUp.js"></script>
     <script src="./js/logIn.js"></script>
     <script src="./js/templates.js"></script>
