--- a/Login.html
+++ b/Login.html
@@ -33,7 +33,7 @@
         </div>
     </div>
 
-    <form onsubmit="logIn(); return false;">
+    <form onsubmit="logIn(); return false;" class="formLogIn">
     <div class="LogInField">
         <div class="displayFLex titleLogIn">
             <img src="assets/img/LogIn.png" alt="">
