--- a/Signup.html
+++ b/Signup.html
@@ -29,7 +29,7 @@
     </div>
 
 
-    <form onsubmit="register(); return false;">
+    <form onsubmit="register(); return false;" class="formSignUp">
     <div class="LogInField">
         <div class="displayFLex titleLogIn">
             <img class="signUpLogo" src="assets/img/Signup.png" alt="">
