--- a/contacts.html
+++ b/contacts.html
@@ -71,8 +71,8 @@
                                 <img class="profilepictureSize" src="assets/img/Frame 79 (1).png">
                                 <div class="right-Container">
                                     <div class="inPutfields">
-                                        <div class="closeButton" id="closeButton">
-                                            <img class="closeImgAdd" src="assets/img/close.png">
+                                        <div class="closeButton">
+                                            <img id="closeButton" class="closeImgAdd" src="assets/img/close.png">
                                         </div>
                                         <div class="mobileAdjustments">
                                         <div class="inputs">
