--- a/help.html
+++ b/help.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./fonts.css">
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
     <link rel="stylesheet" href="./css/help.css">
+    <link rel="stylesheet" href="./css/navbarSidebarMobile.css">
     <script src="./include.js"></script>
     <script src="./js/templates.js"></script>
 </head>
@@ -17,7 +18,7 @@
 <section class="help-section">
     <div class="width-100percent space-between-help">
         <h1>Help</h1>
-        <img src="./assets/img/arrow-blue-left.png">
+        <img onclick="history.back()" src="./assets/img/arrow-blue-left.png">
     </div>
     <div class="margin-top-16 column-help">
         <p>Welcome to the help page for <span class="blue-font">Join</span>, your guide to using our kanban project management tool. Here, we'll provide an overview of what Join is, how it can benefit you, and how to use it.</p>
