added links to Privacy Policy and Legal Notice

--- a/Signup.html
+++ b/Signup.html
@@ -71,8 +71,8 @@
     </form>
 
     <div class="privacyPolicyLegalNotice">
-        <span class="hoverPrivacyPolicy">Privacy Policy</span>
-        <span class="hoverLegalNotice">Legal notice</span>
+        <a href="./privacyPolicy.html" class="PrivacyPolicy">Privacy Policy</span></a>
+        <a href="./legalNotice.html" class="LegalNotice">Legal notice</span></a>
     </div>
 </div>
 
