--- a/contacts.html
+++ b/contacts.html
@@ -46,6 +46,9 @@
             <div id="contactAddedSuccesfullyId" class="contactAddedSuccesfully">
                 <img src="assets/img/addedContadctSuccesfully.png">
             </div>
+            <div id="contactDeletedSuccesfullyId" class="contactSuccesfullyDeleted">
+                <img src="assets/img/ContactSuccesfullyDeleted.png">
+            </div>
 
             <div onclick="closeDeleteAndEdit()" id="overlayOnMobile" class="overlay"></div>
             
