--- a/board.html
+++ b/board.html
@@ -12,7 +12,13 @@
     <script src="./js/signUp.js"></script>
     <script src="./js/logIn.js"></script>
     <script src="./js/templates.js"></script>
+    <script src="./js/boardBeforeInit.js"></script>
     <script src="./js/board.js"></script>
+    <script src="./js/boardTemplates.js"></script>
+    <script src="./js/boardVariables.js"></script>
+    <script src="./js/boardRender.js"></script>
+    <script src="./js/boardPriorities"></script>
+    <script src="./js/boardNewTask.js"></script>
     <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/addTaskContainer.css">
     <link rel="stylesheet" href="./css/board-showBig.css">
