--- a/board.html
+++ b/board.html
@@ -17,7 +17,7 @@
     <script src="./js/boardTemplates.js"></script>
     <script src="./js/boardVariables.js"></script>
     <script src="./js/boardRender.js"></script>
-    <script src="./js/boardPriorities"></script>
+    <script src="./js/boardPriorities.js"></script>
     <script src="./js/boardNewTask.js"></script>
     <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/addTaskContainer.css">
