--- a/board.html
+++ b/board.html
@@ -42,7 +42,7 @@
         <button class="addTaskOnBoardResponsive-Button" onclick="addTaskOnBoard('To-Do')"><img src="./assets/img/addTaskBoardMobile.png"></button>
     </div>
             <div class="input-container-board margin-top-16">
-                <input id="search-input" class="inputFindTask" required type="text" placeholder="Find Task" onkeyup="searchTask()">
+                <input id="search-input1" class="inputFindTask" required type="text" placeholder="Find Task" onkeyup="searchTask()">
                 <img class="inputfield-icon-search" src="./assets/img/search-icon.png">
                 <img class="inputfield-icon-vertical-line" src="./assets/img/vertical-line-board.png">
             </div>
@@ -53,7 +53,7 @@
         <h1>Board</h1>
         <div class="flex-board gap-32">
             <div class="input-container-board">
-                <input id="search-input" class="inputFindTask" required type="text" placeholder="Find Task" onkeyup="searchTask()">
+                <input id="search-input2" class="inputFindTask" required type="text" placeholder="Find Task" onkeyup="searchTaskResponsive()">
                 <img class="inputfield-icon-search" src="./assets/img/search-icon.png">
                 <img class="inputfield-icon-vertical-line" src="./assets/img/vertical-line-board.png">
             </div>
