--- a/summary.html
+++ b/summary.html
@@ -15,6 +15,7 @@
     <script src="./js/logIn.js"></script>
     <script src="./js/templates.js"></script>
     <script src="./js/board.js"></script>
+    <script src="./js/boardBeforeInit.js"></script>
     <script src="./js/summary.js"></script>
   </head>
   <body onload="includeHTML(); initSummary(); showInitials(); greetingUser()">
