--- a/help.html
+++ b/help.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
     <link rel="stylesheet" href="./css/help.css">
     <link rel="stylesheet" href="./css/navbarSidebarMobile.css">
+    <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
     <script src="./include.js"></script>
     <script src="./js/templates.js"></script>
 </head>
-<body onload="includeHTML()">
+<body onload="includeHTML(); showInitials()">
     <div w3-include-html="./assets/templates/header.html"></div>
     <div w3-include-html="./assets/templates/side_menu.html"></div>
 
