--- a/contacts.html
+++ b/contacts.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="css/contacts.css">
     <script src="include.js"></script>
     <script src="js/contacts.js"></script>
+    <script src="js/editContacts.js"></script>
+    <script src="js/mobileContacts.js"></script>
+    <script src="js/addContacts.js"></script>
+    <script src="js/generateHTMLContacts.js"></script>
     <script src="./js/templates.js"></script>
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
