added fonts.css to all HTML

--- a/legalNotice.html
+++ b/legalNotice.html
@@ -4,13 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <script src="./include.js"></script>
     <script src="./js/templates.js"></script>
+
+    <link rel="stylesheet" href="./fonts.css">
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
     <link rel="stylesheet" href="./css/legalNotice.css">
     <link rel="stylesheet" href="./css/legalNoticeResp.css">
     <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
+
     <title>Join | Legal Notice</title>
+
 </head>
 
 <body onload="includeHTML(); showInitials()">
