--- a/Signup.html
+++ b/Signup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join | Sign Up</title>
+    <link rel="stylesheet" href="./fonts.css">
     <link rel="stylesheet" href="css/signUp.css">
     <script src="js/signUp.js"></script>
     <script src="js/register.js"></script>
