--- a/addTask.html
+++ b/addTask.html
@@ -13,6 +13,7 @@
     <script src="./js/addTaskSubtasks.js"></script>
     <script src="./js/addTask.js"></script>
 
+    <link rel="stylesheet" href="./fonts.css">
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
     <link rel="stylesheet" href="./css/addTask.css">
     <link rel="stylesheet" href="./css/addTaskContainer.css">
