--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -4,13 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <script src="./include.js"></script>
     <script src="./js/templates.js"></script>
+
+    <link rel="stylesheet" href="./fonts.css">
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
     <link rel="stylesheet" href="./css/privacyPolicy.css">
     <link rel="stylesheet" href="./css/privacyPolicyResp.css">
     <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
+
     <title>Join | Privacy Policy</title>
+
 </head>
 
 <body onload="includeHTML(); showInitials()">
