--- a/Signup.html
+++ b/Signup.html
@@ -14,11 +14,12 @@
 <div class="centerAll">
 <body>
 
-    <img id="meinBild" src="assets/img/Capa 2.png">
 
-    <div id="zielbereich"></div>
+    <div id="zielbereich">
+        <img class="joinLogoSignUp" src="assets/img/Capa 2.png">
+    </div>
 
-<div id="inhalt" class="centerAll blur">
+<div id="inhalt" class="centerAll">
 
 
     <div id="signUP-Div" class="displayFLex justifyContent overlay-signUp">
