--- a/addTask.html
+++ b/addTask.html
@@ -119,7 +119,7 @@
                         <ul id="subtask-container"></ul>
                     </div>
                 </div>
-                <div class="taskAddedMessageContainer">
+                <div id="taskAddedMessageContainer" class="taskAddedMessageContainer z-index">
                     <img id="taskAddedMessage" class="hidden" src="./assets/img/taskAddedToBoard.png" alt="Task Added">
                 </div>
             </div>
