fixing errors board and summary

--- a/board.html
+++ b/board.html
@@ -48,7 +48,7 @@
             </div>
     </div>
 
-    <div class="space-between-board">
+    <div class="space-between-board width-80percent">
         <div class="just-normal-version">
         <h1>Board</h1>
         <div class="flex-board gap-32">
@@ -65,7 +65,7 @@
 
 <div class="board-distribution">
     <div class="card-board">
-        <div class="space-between-board height-board width-80percent">
+        <div class="space-between-board height-board card-board-title">
             <span class="title-board">To do</span>
             <img onclick="addTaskOnBoard('To-Do')" class="plus-border-board" src="./assets/img/plus-button-board.png">
         </div>
@@ -73,7 +73,7 @@
     </div>
 
     <div class="card-board">
-        <div class="space-between-board height-board width-80percent">
+        <div class="space-between-board height-board card-board-title">
             <span class="title-board">In progress</span>
             <img onclick="addTaskOnBoard('In-Progress')" class="plus-border-board" src="./assets/img/plus-button-board.png">
         </div>
@@ -82,7 +82,7 @@
     </div>
 
     <div class="card-board">
-        <div class="space-between-board height-board width-80percent">
+        <div class="space-between-board height-board card-board-title">
             <span class="title-board">Await feedback</span>
             <img onclick="addTaskOnBoard('Await-Feedback')" class="plus-border-board" src="./assets/img/plus-button-board.png">
         </div>
