--- a/Login.html
+++ b/Login.html
@@ -62,7 +62,7 @@
     </div>       
         <div class="LogInBottomLogIn">
            <button class="logInButton">Log in</button>
-           <button onclick="guestLogIn()" class="guestLogInButton">Guest Log in</button>
+           <button type="button" onclick="guestLogIn()" class="guestLogInButton">Guest Log in</button>
         </div>
     </div>
 </form>
