--- a/Login.html
+++ b/Login.html
@@ -68,8 +68,8 @@
 </form>
 
     <div class="privacyPolicyLegalNotice">
-        <a href="./privacyPolicy.html" class="PrivacyPolicy">Privacy Policy</span></a>
-        <a href="./legalNotice.html" class="LegalNotice">Legal notice</span></a>
+        <a href="./privacyPolicyNoSidebar.html" class="PrivacyPolicy">Privacy Policy</span></a>
+        <a href="./legalNoticeNoSidebar.html" class="LegalNotice">Legal notice</span></a>
     </div>
 </div>
 
