finished fixing errors

--- a/board.html
+++ b/board.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="./css/firstHalfAddTaskContainer.css">
     <link rel="stylesheet" href="./css/secondHalfAddTaskContainer.css">
     <link rel="stylesheet" href="./css/board-Responsive.css">
-    <link rel="stylesheet" href="./css/boardDragDropResponsive.css">
+    <link rel="stylesheet" href="./css/boardlast.css">
     <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
 </head>
 
